--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ p {
     line-height: 19px;
 }
 
-#adicionar-botao {
+.botao-item {
     text-align: center;
     padding: 12px 16px;
     border-radius: 24px;
